# mcp-server

./: AGENTS.md  Cargo.toml  LICENSE  README.md  smithery.yaml
.github/workflows/: ci.yml  release.yml
src/: api.rs  main.rs  mcp.rs  types.rs
